--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <li><a href="#">Sitemap</a></li>
                 </ul>
             </div>
-            <em>&copy; 2014 Jimmy Choo Plc</em>
+            <em>&copy; 2018 Vukasin</em>
         </div>
     </footer>
     <script src="js/script.js"></script>
